--- a/Report/Report.tex
+++ b/Report/Report.tex
@@ -56,8 +56,7 @@ Sean Webb\footnote{Sandia National Laboratory};
 %It should be written as much as possible in non-technical terms, so that a
 %lay reader can understand the context and the contribution of the paper.
 
-% Fix long sentence remove figure
-Springs have many everyday uses, and scientists have studied them thoroughly as a result~\cite{Wahl}. We find them in cars, homes, gyms, and industry, and one common use of helical compression springs, in particular, is in mechanical switches~\cite{SpringDevice}. Acceleration switches, such as the one seen in Figure~\ref{Acceleration Switch}, are used to close electrical circuits once the object carrying the switch reaches a certain acceleration. The main use of such switches is to provide power to sensory equipment and data recorders for very precise amounts of time, and one example of their use is collecting data from rocket sled experiments. 
+Springs have many everyday uses, such as in cars, homes, gyms, and industry. For example, springs are used in acceleration switches like the one seen in Figure~\ref{Acceleration Switch}. Their purpose in this instance is to close an electrical circuit once the object carrying the switch reaches a certain acceleration. This mechanism provides power to sensory equipment and data recorders for very precise amounts of time, and an application of its use is to collect data from rocket sled experiments. 
 
 		\begin{figure}[h]
 		 \begin{center}\includegraphics[scale=.2]{Acceleration_Switch.png}\end{center}
@@ -66,58 +65,13 @@ Springs have many everyday uses, and scientists have studied them thoroughly as 
 		 
 		 \end{figure}	 
 		
-These rocket sled tests include very high velocities and accelerations and end in a destructive impact, and since the test is not easily replicated, we must have the ability to consistently and correctly collect data. This means we require that the spring in the acceleration switch must behave as expected to the forces exerted on it, and having a switch that is closed earlier or later than expected is undesirable~\cite{IMSM2010}. Designing a spring to behave as desired is a complicated problem that requires satisfying numerous constraints on the spring's physical properties. That the desired spring can vary depending on the application further complicates the problem. 
+These rocket sled tests include very high velocities and accelerations and end in a destructive impact. Since the test is not easily replicated, we must have the ability to consistently and correctly collect data. This means we require that the spring in the acceleration switch must behave as expected to the forces exerted on it, and having a switch that is closed earlier or later than expected is undesirable~\cite{IMSM2010}. Designing a spring to behave as desired is a complicated problem that requires satisfying numerous constraints on the spring's physical properties. That the desired spring can vary depending on the application further complicates the problem. 
 
-Spring design under these conditions amounts to a constrained optimization problem where certain properties of the spring may need to be maximized or minimized subject to bounds on some or all of the spring's other properties. Extending the scope of focus beyond springs' use in mechanical switches, which already cover a vast spread of specific spring designs, results in even more possibilities for design specifications. Rather than developing methods to solve these problems on an ad hoc basis, developing tools to address a wide variety of constrained optimization problem formulations for spring design would be beneficial. 
+Spring design under these conditions amounts to a constrained optimization problem where certain properties of the spring may need to be maximized or minimized subject to bounds on some or all of the spring's other properties. Extending the scope of focus beyond springs' use in acceleration switches, which already cover a vast spread of specific spring designs, results in even more possibilities for design specifications. Rather than developing methods to solve these problems on an ad hoc basis, developing a tool to address a wide variety of constrained optimization problems for spring design would be beneficial. 
 
 Designing an optimal spring is not a new problem. Brake et al. considered the design of an acceleration switch with enabled uncertainty~\cite{IMSM2010}. Alternatively, Sastry et al. implemented probabilistic response surface methodology to investigate the complications of uncertainty in designing a spring~\cite{Reliability}. Others have considered the reduction of the optimization problem to focus on a single parameter~\cite{Robust}. Similar tools to the ones mentioned above also exist~\cite{Paredes}.
 
-Motivated by the premise of the workflow shown in Figure~\ref{Workflow}, we produce a novel tool with new capabilities. 
-
-		\begin{figure}[h!]
-		 \begin{center}\includegraphics[scale=.4]{IMSM_Workflow.png}\end{center}
-		 \caption{Illustration of the flow of our approach.}
-		 \label{Workflow}
-		 
-		 \end{figure}
-		 
-The novelties we include are the inherit flexibility in our tool's framework, tools to visualize the existence of solutions for constrained optimization problems, sensitivity analysis capabilities, and design optimization under uncertainty. We also discuss the inclusion of stress relaxation constraints in the spring design, which to our knowledge has not been considered before. We provide details regarding these items as follows. Section~\ref{sec:The_Problem} formally defines the spring design problem for helical compression springs. Section~\ref{sec:The_Approach} expands on the workflow shown in Figure~\ref{Workflow}. Section~\ref{Computational_Experiments} shares cases studies using our approach, and Section~\ref{Summary} summarizes our work and provides suggestions for future work.
-
-
-%%For this example we must optimize the spring to give the best chances of success. Velocities of a rocket sled may vary depending on application, so we should be able to optimize the spring for the application. This leads to an optimization problem. The problem is well defined once the constraints are understood and the objective function that must be maximized or minimized is defined. 
-%
-%\subsection{Generalizing The Example}
-%Expanding on the scope of this problem, a switch may be used in a myriad of ways \cite{SpringDevice}. Depending on the application it is important that one can find an optimal spring. The optimization problem must now require flexibility to allow how a spring is determined to be optimal. In other words, there can be a variety of objective functions and a variety of constraints that are possible.   
-%
-%For any set of constraints and objective function the optimization problem will depend on a set of variables. In optimization we only wish to concern ourselves with the variables for optimization. One can implement structures to hold all data for a spring, and access the relevant  variables for optimization when needed. 
-%
-%In addition, with the expansion of the problem comes the growth of uncertainty in the problem. One can quantify the uncertainty of the problem by conducting a sensitivity analysis of the objective function subject to the constraints and variables given. 
-%\newline
-%
-%The problems that will be discussed in this paper are as follows: 
-%\begin{itemize}
-%	\item Can we develop a flexible framework for designing an optimal spring?
-%
-%	\item Is one able to incorporate feasibility?
-%	
-%	\item What about the concept of stress relaxation?
-%	
-%	\item What about uncertainty in design optimization? 
-%	
-%	
-%\end{itemize}
-
-%\subsection{History}
-%Designing an optimal spring is not a new problem. In 2010 at the SAMSI IMSM workshop a team considered the design of an acceleration switch with enabled uncertainty. In fact, the switch they considered was in figure \ref{Acceleration Switch}. This approach lead to a paper \cite{IMSM2010}. This is not the only approach to uncertainty, in \cite{Reliability} probabilistic response surface methodology was implemented to investigate the complications of uncertainty in designing a spring. In addition to these types of approaches it is possible to narrow focus to a single parameter, in \cite{Robust} they focus on the spring stiffness. In \cite{Paredes} they attempt to design an optimal spring, with the introduction of a sizing tool. All references listed are informed to some extent by \cite{Wahl}. 
-
-
-
-
-%In this paper we will give a description of the springs of interest, helical compression springs, see section \ref{sec:Springs}. Next, the formulation of the problem, see section \ref{sec:Problem}, and the approach taken to the problem see section \ref{sec:Approach}. Following will be a section on workflow with descriptions of each step in the workflow see \ref{sec:workflow}. We will discuss a few case studies given the framework constructed, see \ref{sec:Experiments}. Lastly, a summary with future work that can be worked on, see \ref{sec:summary}.
-
-
-
-
+Motivated by a workflow premise, we produce a novel tool with new capabilities. The novelties we include are the inherit flexibility in our tool's framework, tools to visualize the existence of solutions for constrained optimization problems, sensitivity analysis capabilities, and design optimization under uncertainty. We also discuss the inclusion of stress relaxation constraints in the spring design, which to our knowledge has not been considered before. We provide details regarding these items as follows. Section~\ref{sec:The_Problem} formally defines the spring design problem for helical compression springs. Section~\ref{sec:The_Approach} outlines the workflow. Section~\ref{Computational_Experiments} shares cases studies using our approach, and Section~\ref{Summary} summarizes our work and provides suggestions for future work.
 
 \section{Helical Compression Springs}
 \label{sec:Springs}
@@ -291,32 +245,20 @@ These assumptions have reduced the set of design parameters and have allowed us 
 \textbf{Present and justify approach for solving the problem}
 \textbf{Explain advantages of approach over existing ones}
 \textbf{Tell a story}
-To be as flexible as possible we must be able to handle constraints and objectives that have an unknown number of  variables a priori. To handle this uncertainty we instead of evaluating an objective or constraint with a set of values we evaluate with a "spring object" in the programming sense \cite{OOP}. This spring has all the attributes of interest and the function merely picks what values it needs for evaluation. 
 
-This approach is also implemented in the design of a constraint and objective. An objective is an expression that we must be able to evaluate. A constraint is an expression that we must evaluate and check if this evaluation violates the constraint condition. We use the idea of inheritance and let a constraint inherit the properties of being an objective with additional framework to compare to a condition. This allows the user to interchange constraints and objectives seamlessly.
+Our approach follow the workflow illustrated in Figure~\ref{Workflow}. This is an iterative process that receives a user specified problem, reformulates and solves the problem, and then returns a result for the user to accept or decline. The remainder of this section expands upon the details of each element in this diagram.
 
-Along with the flexible software design, we have implemented the ability to run feasibility and sensitivity checks before trying to optimize. This will allow the user to know additional information about the problem. First, from feasibility, the user will know quickly if the run is unable to find a feasible point to run optimization. Second, from sensitivity, the user can know which parameters will dramatically change the optimization versus which parameters are unnecessarily adding to the dimension of the optimization space. 
- 
-
-
-\section{Workflow}
-\label{sec:workflow}
- 		\begin{figure}[h!]
+		\begin{figure}[h!]
 		 \begin{center}\includegraphics[scale=.4]{IMSM_Workflow.png}\end{center}
 		 \caption{Illustration of the flow of our approach.}
 		 \label{Workflow}
 		 
 		 \end{figure}
-		 
-		 \textbf{This may not be accurate anymore, need Justin's input.}
-Above is an illustration of the workflow that is our approach. This section will go in depth into the feasibility, sensitivity analysis and optimization of our approach.
-
-\textbf{Should we add a workflow of feasibility, sensitivity, and optimization?}
 
 \subsection{User Input}
-\section{User Input}
+\label{sec:User Input}
 
-The first step in our work flow is receiving an arbitrary optimization problem from the user.  In general, this includes an optimization function, a list of free variables and a set of constraints.  From a practical standpoint, it is not feasible to build an algorithm that handles such a large set of problems.  Thus, the first task in our work flow is to maximize the user's ability to specify a problem while still being able to generate a meaningful solution.  As a solution, we place some limits the user's input and designed a program capable of solving this restricted class of problems.
+The first step in our work flow is receiving spring design specifications from the user. In general, this includes an optimization objective, a list of design variables, and a set of constraints. The first task in our work flow is to maximize the user's ability to specify a problem while still being able to generate a meaningful solution. As a solution, we place some limits the user's input and designed a program capable of solving this restricted class of problems.
 
 To reduce the size of the permissible problem space, two restrictions are put on the user's input problem.  First, the user must specify the optimization function as a weighted sum of minimums and maximums.  While other methods for multicriteria optimization exist, implementing these into our scheme has been left to future work.  Second, based on discussions with engineers experienced with spring design, we restricted the space of free variables to those that are considered most important.
 
@@ -325,6 +267,16 @@ Next, to allow our program to handle any problem formulated on this reduced prob
 Using classes allow flexibility because the program's algorithm can be designed to operate on the classes.  For example, the \textbf{OptimizationProblem} class generates the input for the optimizer and sensitivity analysis.  Thus when the user inputs a new problem, the program generates an \textbf{OptimizationProblem} with a specific optimization function and set of constraints.  Thus, the final stage of the user input process is translating the set of optimization parameters into instances of the program's classes.
 
 Additional points to consider...adding new constraint functions and the predefined constraints list.
+
+To be as flexible as possible we must be able to handle constraints and objectives that have an unknown number of  variables a priori. To handle this uncertainty we instead of evaluating an objective or constraint with a set of values we evaluate with a "spring object" in the programming sense \cite{OOP}. This spring has all the attributes of interest and the function merely picks what values it needs for evaluation. 
+
+This approach is also implemented in the design of a constraint and objective. An objective is an expression that we must be able to evaluate. A constraint is an expression that we must evaluate and check if this evaluation violates the constraint condition. We use the idea of inheritance and let a constraint inherit the properties of being an objective with additional framework to compare to a condition. This allows the user to interchange constraints and objectives seamlessly.
+
+Along with the flexible software design, we have implemented the ability to run feasibility and sensitivity checks before trying to optimize. This will allow the user to know additional information about the problem. First, from feasibility, the user will know quickly if the run is unable to find a feasible point to run optimization. Second, from sensitivity, the user can know which parameters will dramatically change the optimization versus which parameters are unnecessarily adding to the dimension of the optimization space. 
+
+\subsection{Problem Definition}
+\label{sec:Problem Definition}
+
 
 % Check capitalization
 \subsection{Feasibility}
@@ -387,10 +339,12 @@ such that
 
 \cite{Derivative} \cite{DirectPaper} \cite{MATLAB:2014a} \cite{DirectUserGuide}
  
- 
+ \subsection{Post Processing}
 
 \section{Computational Experiments}
 \label{sec:Computational_Experiments}
+
+% Include case 1 before submitting draft
 
 \newpage
 \subsection{Case 1:}
@@ -465,10 +419,6 @@ such that
 
 \newpage
 
-
-
-
-
 \section{Summary and Future Work}
 \label{sec:Summary}
 The ability to interchange constraints and objective functions with any number of design variables allows the user the utmost flexibility. With the addition of feasibility and sensitivity analysis it is possible for any configuration of objective function, constraints, and design variables to be analyzed for refinement. The quantification of stress relaxation and creep allow the user a chance to incorporate these properties into any configuration, especially those that have never been tested. 
@@ -476,6 +426,19 @@ The ability to interchange constraints and objective functions with any number o
 Some limitations of the approach outlined are as follows. The choice of optimization and sensitivity analysis are fixed, however, they are modularized to allow a different optimization routine and sensitivity analysis to be ported in. Given the amount of flexibility that is enabled, a user will have to be able to decide if a infeasible solution is due to user error. 
 
 Future work is bountiful for this approach. More analysis of the stress relaxation and creep could result in better performance. An in depth analysis of different models of stress relaxation and their performance in our model would be beneficial. The flexibility allows the inclusion of many different models of stress relaxation and creep to be added
+
+This work developed an intelligent tool for the design of helical compression springs. The key highlights of this tool are (1) Allows for flexible optimization, which enables design of springs with interchanging objective functions and constraints, (2)Can incorporate stress relaxation in the design process, (3) Provides a feasibility design space given the constraints, (4)Provide the global sensitivity indices of the design variables to the objective function. The ability to interchange constraints and objective functions with any number of design variables allows the user the utmost flexibility. With the addition of feasibility and sensitivity analysis it is possible for any configuration of objective function, constraints, and design variables to be analyzed for refinement. The quantification of stress relaxation and creep allow the user a chance to incorporate these properties into any configuration, especially those that have never been tested. The sensitivity indices serves two purposes - help the designer understand which variables have the most influence on the objective function and also help in dimension reduction in the design space for a faster optimization.
+
+Some limitations of the approach outlined are as follows. The choice of optimization and sensitivity analysis are fixed, however, they are modularized to allow a different optimization routine and sensitivity analysis to be ported in. Given the amount of flexibility that is enabled, a user will have to be able to decide if a infeasible solution is due to user error. 
+
+%Provide some highlights of object-oriented programming for Spring model design
+%
+%A couple of sentences of stress relaxation
+
+In this work, the DIRECT algorithm for global optimization is used for the design of springs. Also, computational experiments have been carried to perform design optimization considering tolerances in design variables but not incorporated in the design tool; this is an future work of importance. 
+
+More analysis of the stress relaxation and creep could result in better performance. An in depth analysis of different models of stress relaxation and their performance in our model would be beneficial. The flexibility allows the inclusion of many different models of stress relaxation and creep to be added. In this work, the nested double-loop approach is used for global sensitivity analysis. As the dimension of design variables increases, the nested double-loop approach becomes computationally very intensive. Therefore, more faster single-loop techniques should be considered. Also, reliability analysis within the optimization procedure is carried out using Monte Carlo sampling. As the complexity of the problem increases, in terms of the number of design variables and the number of constraints, Monte Carlo sampling becomes very intensive. Therefore, faster analytical and sampling techniques such as First Order Reliability Methods (FORM), Importance sampling need to be considered.
+
 
 \textbf{Senstivity for optimization}
 
