--- a/Report/Report.tex
+++ b/Report/Report.tex
@@ -74,7 +74,11 @@ Designing an optimal spring is not a new problem. Brake et al. considered the de
 
 Motivated by a workflow premise, we produce a novel tool with new capabilities. The novelties we include are the inherit flexibility in our tool's framework, tools to visualize the existence of solutions for constrained optimization problems, sensitivity analysis capabilities, and design optimization under uncertainty. We also discuss the inclusion of stress relaxation constraints in the spring design, which to our knowledge has not been considered before. We provide details regarding these items as follows. Section~\ref{sec:The_Problem} formally defines the spring design problem for helical compression springs. Section~\ref{sec:The_Approach} outlines the workflow. Section~\ref{Computational_Experiments} shares cases studies using our approach, and Section~\ref{Summary} summarizes our work and provides suggestions for future work.
 
-\section{Helical Compression Springs}
+			
+\section{The Problem} 
+\label{sec:The_Problem}
+
+\subsection{Helical Compression Springs}
 \label{sec:Springs}
 
 Helical springs are the typical spring that comes to most peoples mind, for illustrative purposes, see figure \ref{Spring}. 
@@ -106,8 +110,8 @@ The above spring has many design parameters. These range from physical parameter
 		\end{figure}
 		
 		% Group parameters and change from enumerate
-		\noindent \textbf{Parameters:}
-		\begin{description}[leftmargin=!,labelwidth=\widthof{\bfseries Outer diameter:}]
+		\noindent \textbf{Spring Parameters:}
+		\begin{description}[leftmargin=!,labelwidth=\widthof{\bfseries Ultimate torsional stress:}]
 			\item [Inner diameter:] denoted $\mathbf{d_{i}}$, illustrated in figure \ref{Description2}.
 			
 			\item [Outer diameter:] denoted $\mathbf{d_{o}}$, illustrated in figure \ref{Description1}.
@@ -127,9 +131,9 @@ The above spring has many design parameters. These range from physical parameter
 			
 			\item[Hard length:] denoted $\mathbf{L_{hard}}$, the maximum a spring can compress for the application. i.e., for the acceleration switch this is the maximum compression the acceleration switch's spring should be allowed. 
 			
-			\item[Open force:] denoted $\mathbf{F_{open}}$, this is the force on the spring in open position, i.e., the resting force for the acceleration switch.			
-			
-			\item[Pitch:] denoted $\mathbf{p}$ illustrated in figure \ref{Description1}, depends on the $\mathbf{d_{w}}$,$\mathbf{L_{free}}$, and $\mathbf{N_{a}}$.t			
+			\item[Open force:] denoted $\mathbf{F_{open}}$, this is the force on the spring in open position, i.e., the resting force for the acceleration switch.
+					
+			\item[Pitch:] denoted $\mathbf{p}$ illustrated in figure \ref{Description1}, depends on the $\mathbf{d_{w}}$,$\mathbf{L_{free}}$, and $\mathbf{N_{a}}$.			
 			
 			\item[Shear modulus:] (or modulus of rigidity), denoted $\mathbf{G}$, is one of several quantities for measuring the stiffness of materials.
 			
@@ -137,13 +141,15 @@ The above spring has many design parameters. These range from physical parameter
 			
 			\item[Poisson ratio:] denoted $\mathbf{\nu}$, is a measurement of the poisson effect of a material. 
 			
-			\item[Ultimate torsional stress:], denoted $\mathbf{UTS}$. 
+			\item[Ultimate torsional stress:] denoted $\mathbf{UTS}$. 
 		
 		\end{description}
 
 % Give context to statement		
 One can see that the above parameters are physical design parameters. Each of these are subject to design tolerances. Below is a set of empirical attributes that within a range of values exhibit typical behavior for a spring. We will assume that these attributes are within that range. 
-			
+
+
+		\begin{center}\textbf{Spring Attributes:}\end{center}
 			\begin{description}
 				\item [Spring Rate (k):] \begin{equation} k = \frac{G}{8N_{a}}\frac{d_{w}^{4}}{(d_{i} + d_{w})^{3}}\end{equation}
 				\end{description}
@@ -170,40 +176,31 @@ d_{w} + 3 d_{w}^{2})}{d_{i}(d_{i}+d_{w})^{3}}\right]< UTS\end{equation}
 			This is the expansion of the diameter as compression of the spring is happening. One may notice that \begin{equation}p^{2} \ge d_{w} - \pi^{2} (d_{i} + d_{w})^{2},\end{equation} this is putting an implicit constraint on how much the spring can be extended/compressed.
 			
 
-
-
-			
-			
-\section{The Problem} 
-\label{sec:The_Problem}
-
-\textbf{Add dependency graph.} 
-
 Design an algorithm that optimizes springs with interchangeable objectives and constraints. In addition, attempt to incorporate properties stress relaxation and creep into the available objectives and constraints. 
 
 A list of possible constraints/objectives given in minimization form is below, please note that \\$d_{i}^{max}, d_{o}^{max}, k_{max}, C_{max}$, and $g_{min}$ are user defined bounds. 
  % remove repetitions
-\begin{enumerate}
-	\item $d_{i} < d_{i}^{max}$, this sets a design constraint on what we will allow the inner diamter to be. For the acceleration switch, we must have a spring that will fit the housing of the switch.
-	\item $d_{i} < d_{o}$, physically we must have a bigger outer diameter than inner diameter.
-	\item $d_{i} + 2d_{w} < d_{o}^{max}$, The outer diameter cannot exceed some design limitation.
-	\item$d_{expand} - d_{0}^{max} < 0 $, we will not allow the spring to expand more than a certain amount during compression.
-	\item$ \frac{G}{8N_{a}}\frac{d_{w}^{4}}{(d_{i} + d_{w})^{3}} - k_{max} \le 0 $, there is a maximum spring rate or stiffness that we will allow. 
-
-	\item $\frac{d_{i}}{d_{w}} + 1 - C_{max}< 0$, similarly we will only allow a maximum ratio between the inner diameter and wire diameter. 
-
-	\item $(L_{free} - L_{open})\frac{G}{8N_{a}}\frac{d_{w}^{4}}{(d_{i} + d_{w})^{3}} - F_{open} = 0 $, $F_{open}$ should be physically possible given its formulation.
-
-	\item $\frac{L_{hard} - L_{solid}}{N_{t} - 1} + g_{min} \le  0$. There is a minimum gap we wish to have to ensure our coils cannot bind. 
-
-	\item$\frac{L_{free}}{d_{i} + d_{w}} - \pi \sqrt{\frac{2(2 \nu + 1)}{\nu + 2}}$, if a spring is slender, it may buckle or fold on itself. This is a constraint to address this physical attribute. 
-
-	\item$-UTS + \frac{G(L_{free} - L_{hard})}{4 \pi N_{a} (ec)} \left[\frac{d_{w} (4d_{i}^{2} + 9.46d_{i} 
-d_{w} + 3 d_{w}^{2})}{d_{i}(d_{i}+d_{w})^{3}}\right] < 0$
-
-We do not wish to allow the torsional stress to exceed a certain amount, the ultimate torsional stress, $UTS$.
-
-\end{enumerate}	
+%\begin{enumerate}
+%	\item $d_{i} < d_{i}^{max}$, this sets a design constraint on what we will allow the inner diamter to be. For the acceleration switch, we must have a spring that will fit the housing of the switch.
+%	\item $d_{i} < d_{o}$, physically we must have a bigger outer diameter than inner diameter.
+%	\item $d_{i} + 2d_{w} < d_{o}^{max}$, The outer diameter cannot exceed some design limitation.
+%	\item$d_{expand} - d_{0}^{max} < 0 $, we will not allow the spring to expand more than a certain amount during compression.
+%	\item$ \frac{G}{8N_{a}}\frac{d_{w}^{4}}{(d_{i} + d_{w})^{3}} - k_{max} \le 0 $, there is a maximum spring rate or stiffness that we will allow. 
+%
+%	\item $\frac{d_{i}}{d_{w}} + 1 - C_{max}< 0$, similarly we will only allow a maximum ratio between the inner diameter and wire diameter. 
+%
+%	\item $(L_{free} - L_{open})\frac{G}{8N_{a}}\frac{d_{w}^{4}}{(d_{i} + d_{w})^{3}} - F_{open} = 0 $, $F_{open}$ should be physically possible given its formulation.
+%
+%	\item $\frac{L_{hard} - L_{solid}}{N_{t} - 1} + g_{min} \le  0$. There is a minimum gap we wish to have to ensure our coils cannot bind. 
+%
+%	\item$\frac{L_{free}}{d_{i} + d_{w}} - \pi \sqrt{\frac{2(2 \nu + 1)}{\nu + 2}}$, if a spring is slender, it may buckle or fold on itself. This is a constraint to address this physical attribute. 
+%
+%	\item$-UTS + \frac{G(L_{free} - L_{hard})}{4 \pi N_{a} (ec)} \left[\frac{d_{w} (4d_{i}^{2} + 9.46d_{i} 
+%d_{w} + 3 d_{w}^{2})}{d_{i}(d_{i}+d_{w})^{3}}\right] < 0$
+%
+%We do not wish to allow the torsional stress to exceed a certain amount, the ultimate torsional stress, $UTS$.
+%
+%\end{enumerate}	
 
 % remove the extra specifics
 This list is not exhaustive as we want a user to be able to define new constraints and objectives. The incorporation of stress relaxation and creep are two examples of this. If the reader wishes to read about these in detail please check out section \ref{sec:stress}. 
@@ -214,30 +211,29 @@ In order to simplify the problem we have some assumptions. First, we have assume
 
 For this reason we also will consider all springs to be have a closed end condition. With these assumptions we simplify our constraints for pitch, $p$, solid length, $L_{solid}$, and the diametral expansion, $d_{expand}$.
 
-\textbf{JUSTIFY ASSUMPTIONS}
+
 These assumptions have reduced the set of design parameters and have allowed us to simplify the problem. Without these assumptions we would need to deduce at run time what formulas we can use and this is a challenging problem from an implementation stand point. Also, we have a very complicated formula for diametral expansion if the end conditions are not closed. This presents issues of solving a cubic without the ability of discerning if the roots will be physically meaningful. 
 
 
-\subsection{Mathematical Model}
+\subsection{Constrained Optimization}
+\label{sec:Constrained_Optimization}
 			
 			The mathematical model is as follows: 
 				\begin{equation*}
  					\begin{aligned}
- 						& \underset{\textbf{x}}{\text{minimize/maximize}}
- 						& & O(\textbf{x}) \\
+ 						& \underset{\textbf{x}}{\text{min}}
+ 						& & F(\textbf{x}) \\
  						& \text{subject to}
- 						& & C(\textbf{x}) \le \textbf{y}
+ 						& & G(\textbf{x}) \le 0
  					\end{aligned}
 				\end{equation*}
 
 \begin{itemize}
 	\item \textbf{x} is a set of variables for optimization, they are user specified.
 	
-	\item \textbf{y} is a set of bounds on the constraints, they are user specified.
+	\item F(\textbf{x}) is the objective function. It is comprised of any parameters or attributes described above. It can also include other user defined attributes and parameters not considered in this paper. The user specifies the objective function.  
 	
-	\item O(\textbf{x}) is the objective function. It is comprised of any parameters or attributes described above. It can also include other user defined attributes and parameters not considered in this paper. The user specifies the objective function.  
-	
-	\item C(\textbf{x}) is the list of constraints. It is comprised of any parameters or attributes described above. It can also include other user defined attributes and parameters not considered in this paper. The user specifies the constraints to use.
+	\item G(\textbf{x}) is the list of constraints. It is comprised of any parameters or attributes described above. It can also include other user defined attributes and parameters not considered in this paper. The user specifies the constraints to use.
 \end{itemize}
 
 % pull top stuff down into sections
@@ -245,9 +241,7 @@ These assumptions have reduced the set of design parameters and have allowed us 
 \section{The Approach}
 \label{sec:The_Approach}
 
-\textbf{Present and justify approach for solving the problem}
-\textbf{Explain advantages of approach over existing ones}
-\textbf{Tell a story}
+
 
 Our approach follow the workflow illustrated in Figure~\ref{Workflow}. This is an iterative process that receives a user specified problem, reformulates and solves the problem, and then returns a result for the user to accept or decline. The remainder of this section expands upon the details of each element in this diagram.
 
@@ -265,7 +259,7 @@ The first step in our work flow is receiving spring design specifications from t
 
 To reduce the size of the permissible problem space, two restrictions are put on the user's input problem.  First, the user must specify the optimization function as a weighted sum of minimums and maximums.  While other methods for multicriteria optimization exist, implementing these into our scheme has been left to future work.  Second, based on discussions with engineers experienced with spring design, we restricted the space of free variables to those that are considered most important.
 
-Next, to allow our program to handle any problem formulated on this reduced problem space, our software uses an object oriented design.  Object-oriented programming is an approach to software design that centers around classes.  Classes are essentially data containers capable of performing a predefined set of tasks.  For example, our program uses a \textbf{constraint} class that includes the constraint's function, and a way to check whether the constraint is violated at a given point.
+Next, to allow our program to handle any problem formulated on this reduced problem space, our software uses an object oriented design.  Object-oriented programming is an approach to software design that centers around classes.  Classes are essentially data containers capable of performing a predefined set of tasks.  For example, our program uses a \textbf{Constraint} class that includes the constraint's function, and a way to check whether the constraint is violated at a given point.
 
 Using classes allow flexibility because the program's algorithm can be designed to operate on the classes.  For example, the \textbf{OptimizationProblem} class generates the input for the optimizer and sensitivity analysis.  Thus when the user inputs a new problem, the program generates an \textbf{OptimizationProblem} with a specific optimization function and set of constraints.  Thus, the final stage of the user input process is translating the set of optimization parameters into instances of the program's classes.
 
